fix code block wrapping in posts

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,3 +38,9 @@ em {
     z-index: -1;
   }
 }
+
+// Fix code block wrapping in posts
+.content pre {
+  white-space: pre-wrap;
+  word-break: keep-all;
+}
